[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_05.png" type="Texture" id=1]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_05.png" type="Texture" id=2]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_13.png" type="Texture" id=3]
[ext_resource path="res://assets/Homura animations/homura_standv2/homura_stand_01.png" type="Texture" id=4]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_7.png" type="Texture" id=5]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_11.png" type="Texture" id=6]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_6.png" type="Texture" id=7]
[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_02.png" type="Texture" id=8]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_2.png" type="Texture" id=9]
[ext_resource path="res://assets/Homura animations/homura_standv2/homura_stand_05.png" type="Texture" id=10]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_12.png" type="Texture" id=11]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_3.png" type="Texture" id=12]
[ext_resource path="res://assets/Homura animations/homura_standv2/homura_stand_04.png" type="Texture" id=13]
[ext_resource path="res://assets/Homura animations/homura_standv2/homura_stand_02.png" type="Texture" id=14]
[ext_resource path="res://assets/Homura animations/homura_standv2/homura_stand_03.png" type="Texture" id=15]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_02.png" type="Texture" id=16]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_4.png" type="Texture" id=17]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_8.png" type="Texture" id=18]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_09.png" type="Texture" id=19]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_5.png" type="Texture" id=20]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_01.png" type="Texture" id=21]
[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_01.png" type="Texture" id=22]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_1.png" type="Texture" id=23]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_04.png" type="Texture" id=24]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_0.png" type="Texture" id=25]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_14.png" type="Texture" id=26]
[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_04.png" type="Texture" id=27]
[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_03.png" type="Texture" id=28]
[ext_resource path="res://assets/Homura animations/Correr adelante/Correr adelante_9.png" type="Texture" id=29]
[ext_resource path="res://assets/Homura animations/homura_lose/homura_lose_06.png" type="Texture" id=30]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_06.png" type="Texture" id=31]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_07.png" type="Texture" id=32]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_08.png" type="Texture" id=33]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_03.png" type="Texture" id=34]
[ext_resource path="res://assets/Homura animations/homura_win/homura_win_10.png" type="Texture" id=35]
[ext_resource path="res://Player/Player.gd" type="Script" id=36]
[ext_resource path="res://assets/Sonidos/RecogerBombas_v1.wav" type="AudioStream" id=37]
[ext_resource path="res://assets/Sonidos/MadokaHeadSound_v1.wav" type="AudioStream" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 8 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 1 ), ExtResource( 30 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 16 ), ExtResource( 34 ), ExtResource( 24 ), ExtResource( 2 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 19 ), ExtResource( 35 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 26 ), ExtResource( 26 ) ],
"loop": true,
"name": "Win",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 29 ) ],
"loop": true,
"name": "Run",
"speed": 13.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.6466, 55.3362 )

[node name="Player" type="Area2D"]
input_pickable = false
script = ExtResource( 36 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
animation = "Run"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BombAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )
volume_db = -20.0

[node name="MadokaHeadAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
